fixed height on mobile

--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -9,7 +9,7 @@
   max-width: 30em;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   margin: auto;
 }
 
